# KV-planner

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Makefile  README.md  benchmark_ollama.py  benchmark_rtx5060.json  example_benchmark_validation.py  example_complete.py  plan_rtx5060.json  pyproject.toml  requirements.txt  validate_caching.py  validate_cost.py  validate_planner.py  validate_quantization.py  validation_rtx5060.json
.claude/: settings.local.json
docs/: README.md  test_on_real_models.md
docs/validation_results/: A100-PCIe-80GB_qwen2.5-7b.json  H100-SXM-80GB_deepseek-v2-lite.json  H100-SXM-80GB_qwen2.5-7b.json  RTX-4090_qwen2.5-7b.json  summary.md
scripts/: render_docs_screenshots.py  render_standalone_charts.py
scripts/validation/: README.md  aggregate_results.py  in_pod_validate.sh  runpod_orchestrator.py
src/kv_planner/: __init__.py  version.py
src/kv_planner/application/: __init__.py  diagnose.py  export.py  fleet.py  planner.py  rationale.py  recommender.py
src/kv_planner/cli/: __init__.py  main.py
src/kv_planner/core/: __init__.py  interfaces.py
src/kv_planner/core/cost/: __init__.py  analyzer.py  carbon.py
src/kv_planner/core/explain/: __init__.py  waterfall.py
src/kv_planner/core/memory/: __init__.py  naive.py  paged.py
src/kv_planner/core/performance/: __init__.py  reasoning.py  roofline.py  speculative.py
src/kv_planner/core/strategies/: __init__.py  caching.py  quantization.py
src/kv_planner/core/training/: __init__.py  planner.py  unsloth_runner.py
src/kv_planner/domain/: __init__.py  constraints.py  exceptions.py  hardware.py  model.py  precision.py  traffic.py
src/kv_planner/gui/: __init__.py  __main__.py  app.py  charts.py  presets.py  window.py
src/kv_planner/infrastructure/: hw_detect.py  model_catalog.py  pricing.py  runtime_probe.py
src/kv_planner/infrastructure/benchmarks/: __init__.py  runner.py  validator.py
src/kv_planner/infrastructure/hardware_db/: __init__.py  gpu_specs.py  laptop_adjustments.py
src/kv_planner/loadtest/: __init__.py  runner.py
src/kv_planner/mcp/: __init__.py  server.py
src/kv_planner/tui/: __init__.py  __main__.py  app.py  bindings.py  dashboard.py  scoring.py  state.py  themes.py
src/kv_planner/tui/renderers/: __init__.py  _util.py  advanced.py  compare.py  detail.py  header.py  help.py  plan.py  simulate.py  status.py  table.py
tests/: __init__.py  conftest.py
tests/unit/core/: test_moe.py  test_new_features.py  test_paged_memory.py  test_physics_regression.py  test_quantization.py  test_roofline.py  test_training.py
tests/unit/domain/: test_model.py
tests/unit/loadtest/: test_loadtest.py
tests/unit/tui/: test_renderers.py  test_scoring.py  test_state.py
